2015-04-23  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Improve parsing if a line is misquoted.

2015-04-22  Xu Han <xhan@zmanda.com>
	* server-src/amanda-rest-server.pl: exit code 1 when start fails

2015-04-22  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amflock.c: Cleanup
	* server-src/cmdfile.c: Retry lock on 1.

2015-04-22  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Installcheck/Config.pm: Set inparallel to 2.
	* installcheck/Amanda_Rest_Configs.pl: Fix for inparallel value.

2015-04-21  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Retry on 429 or 503 error.

2015-04-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: Set $dumper->{status} to 'retry' on L_RETRY

2015-04-21  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Installcheck/Dumpcache.pm: Use --no-taper

2015-04-20  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Runs.pm: use File::Glob qw( :glob );

2015-04-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Do not send CLOSE_VOLUME request if the worker
	  have no volume.

2015-04-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driverio.c, server-src/planner.c: Fix bug found by
	  coverity.

2015-04-03  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Rest_Dumps.pl: Do not hardcoded path
	* installcheck/amoverview.pl: Increase --diskwidth to 200

2015-04-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix compilation

2015-04-03  Jean-Louis Martineau <martineau@zmanda.com>
	driver can do vault.
	* common-src/conffile.c: s/CONF_AMVAULT_STORAGE/CONF_VAULT_STORAGE/,
	  add CONF_VAULT
	* common-src/conffile.h: Add vault_list_t and CONFTYPE_VAULT_LIST
	* device-src/xfer-dest-taper-cacher.c: Improve debugging statement
	* device-src/xfer-dest-taper-directtcp.c: Improve debugging statement
	* device-src/xfer-dest-taper-splitter.c: Improve debugging statement